VFS-2494 Fixing too small size column

--- a/src/app/styles/data.scss
+++ b/src/app/styles/data.scss
@@ -181,9 +181,9 @@
   position: relative !important;
 }
 .file-list-col-size {
-  width: 70px;
-  min-width: 70px;
-  max-width: 70px;
+  width: 95px;
+  min-width: 95px;
+  max-width: 95px;
 }
 .file-list-col-permissions {
   width: 140px;
